--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>星云</title>
-<link href="file:///C|/Users/110/AppData/Roaming/Adobe/Dreamweaver CC 2018/zh_CN/Configuration/Temp/Assets/eamB30E.tmp/BlogPostAssets/styles/blogPostStyle.css" rel="stylesheet" type="text/css">
+<link href="" rel="stylesheet" type="text/css">
 <script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
 <style type="text/css">
 	body {background:#730507}
